Fix initial path

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://molanosantiago.github.io/origen/",
+  "homepage": "/",
   "name": "origen",
   "version": "0.1.0",
   "private": true,
